Cleaning up the central limit theorem notebook

--- a/Central Limit Theorem.ipynb
+++ b/Central Limit Theorem.ipynb
@@ -21,18 +21,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy import stats\n",
-    "from collections import namedtuple\n",
-    "\n",
-    "# Create a figure with 4 axes for our 4 distributions\n",
-    "#fig, (ax1, ax2, ax3, ax4) = plt.subplots(1, 4, figsize=(10,5))\n",
     "\n",
     "# Set a seed\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "# Set a sample size for our distributions\n",
-    "sample_size = 10000\n",
-    "\n",
-    "# Distrib = namedtuple('Distrib', ['name', 'params', 'samples'])"
+    "np.random.seed(42)"
    ]
   },
   {
@@ -279,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*The issue with the plotting of the Poisson is a result of it being a discrete distribution, and the uneven binning of the possible discrete outputs from the distribution. We'll see later that with more distributions *"
+    "*The issue with the plotting of the Poisson is a result of it being a discrete distribution, and the uneven binning of the possible discrete outputs from the distribution. To fix this, we can ensure an appropriate number of bins but it doesn't matter too much for the purposes of this notebook*"
    ]
   },
   {
