--- a/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
+++ b/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
@@ -227,7 +227,9 @@
     "2 & 1.5 \\\\ \n",
     "1.3 & 2.5\n",
     "\\end{bmatrix}\n",
-    "\\end{align*}"
+    "\\end{align*}\n",
+    "\n",
+    "### KL Validation"
    ]
   },
   {
@@ -380,6 +382,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### JS Divergence Calculation\n",
+    "\n",
     "The KL part looks fine, so let's compute the JS divergence (or distance as we return the square root). To avoid calculating the inverse and determinant twice, we'll modify the functions a little bit."
    ]
   },
@@ -416,6 +420,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Validation as a metric\n",
+    "\n",
     "Just to observe that it is a metric, we'll check that it is symmetric"
    ]
   },
@@ -431,7 +437,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Then we'll check if it satisfies the triangle inequality"
+   ]
   },
   {
    "cell_type": "code",
