Completed KL/JS validation

--- a/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
+++ b/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
@@ -214,18 +214,18 @@
     "I'll be using two simple two-dimensional Gaussians for this, defined as follows for two distributions, $P$ and $Q$\n",
     "\n",
     "\\begin{align*}\n",
-    "\\mu_{P} = [0,0.5],~~~\n",
+    "\\mu_{P} = [1.1,0.5],~~~\n",
     "\\Sigma_{P} = \n",
     "\\begin{bmatrix}\n",
-    "2 & 1.5 \\\\ \n",
+    "2.0 & 1.5 \\\\ \n",
     "1.3 & 2.5\n",
     "\\end{bmatrix}\n",
     "\\qquad\\qquad\n",
-    "\\mu_{Q} = [0,0.5],~~~\n",
+    "\\mu_{Q} = [0.3,1.5],~~~\n",
     "\\Sigma_{Q} = \n",
     "\\begin{bmatrix}\n",
-    "2 & 1.5 \\\\ \n",
-    "1.3 & 2.5\n",
+    "4.0 & 1.2 \\\\ \n",
+    "1.4 & 3.5\n",
     "\\end{bmatrix}\n",
     "\\end{align*}\n",
     "\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -243,17 +243,17 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
-    "same = True\n",
+    "same = False\n",
     "\n",
-    "mu_q = np.array([[0.3],[1.5]])\n",
-    "sigma_q = np.array([[4.0,1.2],[1.4,3.5]])\n",
+    "mu_q = np.array([[0],[0]])\n",
+    "sigma_q = np.array([[4.0,1.3],[1.3,3.5]])\n",
     "\n",
     "if same:\n",
-    "    mu_p = np.array([[0.3],[1.5]])\n",
-    "    sigma_p = np.array([[4.0,1.2],[1.4,3.5]])\n",
+    "    mu_p = np.array([[0],[0]])\n",
+    "    sigma_p = np.array([[4.0,1.3],[1.3,3.5]])\n",
     "else:\n",
-    "    mu_p = np.array([[1.1],[0.5]])\n",
-    "    sigma_p = np.array([[2.0,1.5],[1.3,2.5]])  \n",
+    "    mu_p = np.array([[0.6],[0.2]])\n",
+    "    sigma_p = np.array([[2.0,1.5],[1.5,2.5]])  \n",
     "\n",
     "def calcMidpoint(mu_p, mu_q, sigma_p, sigma_q):\n",
     "    mu_m = 0.5*(mu_p+mu_q)\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -299,79 +299,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std_q_x = np.sqrt(sigma_q[0,0])\n",
-    "std_q_y = np.sqrt(sigma_q[1,1])\n",
-    "std_p_x = np.sqrt(sigma_p[0,0])\n",
-    "std_p_y = np.sqrt(sigma_p[1,1])\n",
-    "\n",
-    "q_x = np.linspace(mu_q[0] - 3*std_q_x, mu_q[0] + 3*std_q_x, 100)\n",
-    "q_y = np.linspace(mu_q[1] - 3*std_q_y, mu_q[1] + 3*std_q_y, 100)\n",
-    "p_x = np.linspace(mu_p[0] - 3*std_p_x, mu_p[0] + 3*std_p_x, 100)\n",
-    "p_y = np.linspace(mu_p[1] - 3*std_p_y, mu_p[1] + 3*std_p_y, 100)\n",
-    "\n",
-    "#print(q_y)\n",
-    "\n",
-    "q_mesh_x, q_mesh_y = np.meshgrid(q_x,q_y)\n",
-    "p_mesh_x, p_mesh_y = np.meshgrid(p_x,q_y)\n",
-    "\n",
-    "# np.dstack((p_mesh_x, p_mesh_y))\n",
-    "# np.mgrid[mu_p[0]-3*std_p_x:mu_p[0]+3*std_p_x:100j, mu_p[1] - 3*std_p_y:mu_p[1] + 3*std_p_y:100j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.] [[ 0.]]\n"
+      "0.326497309547 [[ 0.32649731]]\n"
      ]
     }
    ],
    "source": [
-    "p_pdf = stats.multivariate_normal.pdf(np.dstack((p_mesh_x, p_mesh_y)),mean=mu_p.flatten(),cov=sigma_p)\n",
-    "q_pdf = stats.multivariate_normal.pdf(np.dstack((q_mesh_x, q_mesh_y)),mean=mu_q.flatten(),cov=sigma_q)\n",
+    "from itertools import product\n",
+    "\n",
+    "q_x = np.linspace(-15,15,1000)\n",
+    "q_y = np.linspace(-15,15,1000)\n",
+    "p_x = np.linspace(-15,15,1000)\n",
+    "p_y = np.linspace(-15,15,1000)\n",
+    "\n",
+    "p_pdf = stats.multivariate_normal.pdf(list(product(p_x,p_y)),mean=mu_p.flatten(),cov=sigma_p)\n",
+    "q_pdf = stats.multivariate_normal.pdf(list(product(q_x,q_y)),mean=mu_q.flatten(),cov=sigma_q)\n",
     "\n",
     "scipy_kl = stats.entropy(pk=p_pdf, qk=q_pdf)\n",
-    "own_kl = calcKL(mu_p, sigma_p, mu_q, sigma_p)\n",
-    "\n",
-    "print(scipy_kl, own_kl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.506992197915 [[ 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "samples_p = np.random.multivariate_normal(mu_p.flatten(), sigma_p, size=10000)\n",
-    "samples_q = np.random.multivariate_normal(mu_q.flatten(), sigma_q, size=10000)\n",
-    "\n",
-    "p_pdf = stats.multivariate_normal.pdf(samples_p,mean=mu_p.flatten(),cov=sigma_p)\n",
-    "q_pdf = stats.multivariate_normal.pdf(samples_q,mean=mu_q.flatten(),cov=sigma_q)\n",
-    "\n",
-    "scipy_kl = stats.entropy(pk=p_pdf, qk=q_pdf)\n",
-    "own_kl = calcKL(mu_p, sigma_p, mu_q, sigma_p)\n",
+    "own_kl = calcKL(mu_p, sigma_p, mu_q, sigma_q)\n",
     "\n",
     "print(scipy_kl, own_kl)"
    ]
@@ -387,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def calcKL_PM(mu_p, mu_m, sigma_p, det_m, inv_m):\n",
-    "    d = len(mu_1)\n",
+    "    d = len(mu_p)\n",
     "    det_p = np.linalg.det(sigma_p)\n",
     "    mu_diff = mu_m - mu_p\n",
     "    \n",
@@ -425,18 +376,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.30870839]] [[ 0.30870839]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert calcJS(mu_p, mu_q, sigma_p, sigma_q) == calcJS(mu_q, mu_p, sigma_q, sigma_p)\n",
+    "print(calcJS(mu_p, mu_q, sigma_p, sigma_q), calcJS(mu_q, mu_p, sigma_q, sigma_p))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we'll check if it satisfies the triangle inequality"
+    "Then we'll check if it satisfies the triangle inequality. For reference, we'll just show empirically that a metric such as the Euclidean distance does satisfy this, that the KL divergence does not, and then that the JS distance does."
    ]
   },
   {
@@ -446,7 +406,85 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generate the vectors for Euclidean\n",
+    "x = np.array([0,])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Generate the 3 distributions for KL & JS calcs\n",
+    "\n",
+    "mu_q = np.array([[0],[0]])\n",
+    "sigma_q = np.array([[4.0,1.3],[1.3,3.5]])\n",
+    "\n",
+    "mu_p = np.array([[2],[0]])\n",
+    "sigma_p = np.array([[0.6,3.1],[3.1,2.5]])\n",
+    "\n",
+    "mu_r = np.array([[4],[-2.5]])\n",
+    "sigma_r = np.array([[1.1,2.1],[2.1,5.1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will need to show that $D_{KL}(P~||~Q) + D_{KL}(Q~||~R) < D_{KL}(P~||~R)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "metrics = {\n",
+    "    'euclidean': \n",
+    "        {'func': scipy.spatial.distance.euclidean, 'params': x,y},\n",
+    "    'kl' : \n",
+    "        {'func': calcKL, 'params': mu_p, mu_q, sigma_p, sigma_q}\n",
+    "    'js' : \n",
+    "        {'func': calcJS, 'params': mu_p, mu_q, sigma_p, sigma_q}\n",
+    "}\n",
+    "\n",
+    "# Trying to be too smart above but it is fiddly, so may need to reformat\n",
+    "\n",
+    "def satisfyTriangle(metric):\n",
+    "    if_metric = False\n",
+    "    \n",
+    "    xy = metric()\n",
+    "    yz = \n",
+    "    xz =\n",
+    "    \n",
+    "    sides = sorted([xy, yz, xz])\n",
+    "    \n",
+    "    if sides[0]+sides[1] >= sides[2]:\n",
+    "        if_metric = True\n",
+    "    \n",
+    "    return if_metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First use Euclidean distance in the satisfyTriangle function to check it works\n",
+    "\n",
+    "for metric_name, func in metrics.items():\n",
+    "    satisfyTriangle(func)"
+   ]
   }
  ],
  "metadata": {
