Clean up for JS notebook

--- a/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
+++ b/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
@@ -218,23 +218,24 @@
     "\\Sigma_{P} = \n",
     "\\begin{bmatrix}\n",
     "2.0 & 1.5 \\\\ \n",
-    "1.3 & 2.5\n",
+    "1.5 & 2.5\n",
     "\\end{bmatrix}\n",
     "\\qquad\\qquad\n",
-    "\\mu_{Q} = [0.3,1.5],~~~\n",
+    "\\mu_{Q} = [0.0,0.0],~~~\n",
     "\\Sigma_{Q} = \n",
     "\\begin{bmatrix}\n",
-    "4.0 & 1.2 \\\\ \n",
-    "1.4 & 3.5\n",
+    "4.0 & 1.3 \\\\ \n",
+    "1.3 & 3.5\n",
     "\\end{bmatrix}\n",
     "\\end{align*}\n",
     "\n",
-    "### KL Validation"
+    "### KL Validation\n",
+    "Let's start by validating our KL divergence calculation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -252,7 +253,7 @@
     "    mu_p = np.array([[0],[0]])\n",
     "    sigma_p = np.array([[4.0,1.3],[1.3,3.5]])\n",
     "else:\n",
-    "    mu_p = np.array([[0.6],[0.2]])\n",
+    "    mu_p = np.array([[1.1],[0.5]])\n",
     "    sigma_p = np.array([[2.0,1.5],[1.5,2.5]])  \n",
     "\n",
     "def calcMidpoint(mu_p, mu_q, sigma_p, sigma_q):\n",
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -294,19 +295,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compare our KL function to scipy's, let's sample from our distributions and feed it into scipy's entropy function and compare the output."
+    "To compare our KL function to scipy's, which uses the normal formulation of the KL $(\\sum_{i} P(i) \\log \\frac{P(i)}{Q(i)})$, let's sample from our distributions and feed it into scipy's entropy function and compare the output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.326497309547 [[ 0.32649731]]\n"
+      "0.436042394844 [[ 0.43604239]]\n"
      ]
     }
    ],
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -369,121 +370,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validation as a metric\n",
+    "### Symmetric Validation\n",
     "\n",
-    "Just to observe that it is a metric, we'll check that it is symmetric"
+    "We'll check that it is symmetric so that it satisfies that condition. The final property that $KL$ does not have that $JS$ needs is the triangle inequality, which is better shown mathematically (the proof of this can be found in [Endres & Schindelin's paper - *A New Metric for Probability Distributions* ](https://research-repository.st-andrews.ac.uk/bitstream/handle/10023/1591/Endres2003-IEEETransInfTheory49-NewMetric.pdf;jsessionid=975E5DEE2D435B1363DEE20C2A33F439?sequence=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.30870839]] [[ 0.30870839]]\n"
+      "[[ 0.33262859]] [[ 0.33262859]]\n"
      ]
     }
    ],
    "source": [
     "assert calcJS(mu_p, mu_q, sigma_p, sigma_q) == calcJS(mu_q, mu_p, sigma_q, sigma_p)\n",
     "print(calcJS(mu_p, mu_q, sigma_p, sigma_q), calcJS(mu_q, mu_p, sigma_q, sigma_p))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we'll check if it satisfies the triangle inequality. For reference, we'll just show empirically that a metric such as the Euclidean distance does satisfy this, that the KL divergence does not, and then that the JS distance does."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Generate the vectors for Euclidean\n",
-    "x = np.array([0,])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Generate the 3 distributions for KL & JS calcs\n",
-    "\n",
-    "mu_q = np.array([[0],[0]])\n",
-    "sigma_q = np.array([[4.0,1.3],[1.3,3.5]])\n",
-    "\n",
-    "mu_p = np.array([[2],[0]])\n",
-    "sigma_p = np.array([[0.6,3.1],[3.1,2.5]])\n",
-    "\n",
-    "mu_r = np.array([[4],[-2.5]])\n",
-    "sigma_r = np.array([[1.1,2.1],[2.1,5.1]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Will need to show that $D_{KL}(P~||~Q) + D_{KL}(Q~||~R) < D_{KL}(P~||~R)$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "metrics = {\n",
-    "    'euclidean': \n",
-    "        {'func': scipy.spatial.distance.euclidean, 'params': x,y},\n",
-    "    'kl' : \n",
-    "        {'func': calcKL, 'params': mu_p, mu_q, sigma_p, sigma_q}\n",
-    "    'js' : \n",
-    "        {'func': calcJS, 'params': mu_p, mu_q, sigma_p, sigma_q}\n",
-    "}\n",
-    "\n",
-    "# Trying to be too smart above but it is fiddly, so may need to reformat\n",
-    "\n",
-    "def satisfyTriangle(metric):\n",
-    "    if_metric = False\n",
-    "    \n",
-    "    xy = metric()\n",
-    "    yz = \n",
-    "    xz =\n",
-    "    \n",
-    "    sides = sorted([xy, yz, xz])\n",
-    "    \n",
-    "    if sides[0]+sides[1] >= sides[2]:\n",
-    "        if_metric = True\n",
-    "    \n",
-    "    return if_metric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# First use Euclidean distance in the satisfyTriangle function to check it works\n",
-    "\n",
-    "for metric_name, func in metrics.items():\n",
-    "    satisfyTriangle(func)"
    ]
   }
  ],
