--- a/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
+++ b/Jensen-Shannon Divergence for Multivariate Gaussians in Python.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -250,8 +250,8 @@
     "sigma_q = np.array([[4.0,1.3],[1.3,3.5]])\n",
     "\n",
     "if same:\n",
-    "    mu_p = np.array([[0],[0]])\n",
-    "    sigma_p = np.array([[4.0,1.3],[1.3,3.5]])\n",
+    "    mu_p = mu_q\n",
+    "    sigma_p = sigma_q\n",
     "else:\n",
     "    mu_p = np.array([[1.1],[0.5]])\n",
     "    sigma_p = np.array([[2.0,1.5],[1.5,2.5]])  \n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -372,19 +372,19 @@
    "source": [
     "### Symmetric Validation\n",
     "\n",
-    "We'll check that it is symmetric so that it satisfies that condition. The final property that $KL$ does not have that $JS$ needs is the triangle inequality, which is better shown mathematically (the proof of this can be found in [Endres & Schindelin's paper - *A New Metric for Probability Distributions* ](https://research-repository.st-andrews.ac.uk/bitstream/handle/10023/1591/Endres2003-IEEETransInfTheory49-NewMetric.pdf;jsessionid=975E5DEE2D435B1363DEE20C2A33F439?sequence=1)"
+    "We'll check that it is symmetric so that it satisfies that condition. The final property that $KL$ does not have that $JS$ needs is the triangle inequality, which is better shown mathematically (the proof of this can be found in [Endres & Schindelin's paper - *A New Metric for Probability Distributions*](https://research-repository.st-andrews.ac.uk/bitstream/handle/10023/1591/Endres2003-IEEETransInfTheory49-NewMetric.pdf;jsessionid=975E5DEE2D435B1363DEE20C2A33F439?sequence=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.33262859]] [[ 0.33262859]]\n"
+      "[[ 0.38174207]] [[ 0.38174207]]\n"
      ]
     }
    ],
